2023.12.20. Added zAA2AngleAndAxis. [zeo_vec3d]
2023.12.20. Modified specifications of zVec3DNormalize and zVec3DNormalizeDRC to return 1 if the given vector is tiny. [zeo_vec3d]
2023. 8.10. Modified _zShape3DImportFromZTK. [zeo_shape3d]
2023. 8.10. Abolished zPH3DFReadPLY, zPH3DFWritePLY_ASCII, zPH3DFWritePLY_Bin, zPH3DFWritePLY, and zShape3DFReadPLY, and defined zPH3DReadFilePLY, zPH3DWriteFilePLY_ASCII, zPH3DWriteFilePLY_Bin, zPH3DWriteFilePLY, and zShape3DReadFilePLY instead. [zeo_ph_ply, zeo_shape3d, app]
2023. 8. 7. Abolished zShape3DFReadOBJ, and defined zShape3DReadFileOBJ instead. [zeo_shape3d]
2023. 8. 7. Added zPH3DReadFileOBJ. [zeo_ph_obj]
2023. 8. 7. Modified specifications of zPH3DFWriteSTL_ASCII and zPH3DFWriteSTL_Bin. [zeo_ph_stl]
2023. 8. 7. Modified specification of zPH3DReadFileDAE. [zeo_ph_dae]
2023. 8. 7. Abolished zPH3DFReadSTL and zPH3DFWriteSTL, and added zPH3DReadFileSTL and zPH3DWriteFileSTL instead. [zeo_ph_stl, zeo_shape3d, app]
2023. 8. 7. Renamed zPH3DFReadDAE and zShape3DFReadDAE to zPH3DReadFileDAE and zShape3DReadFileDAE, respectively. [zeo_ph_dae, zeo_shape3d]
2023. 8. 7. Modified _zShape3DImportFromZTK to open external geometry files with binary mode (thanks to Daishi Kaneta). [zeo_shape3d]
2023. 8. 7. Redefined zAxis and zDir as int8_t (thanks to Daishi Kaneta). [zeo_misc]
2023. 8. 7. Modified terra_test in example/map (thanks to Daishi Kaneta). [example]
2023. 6.28. Abolished buf and lbuf members of zTexture and accordingly zTextureBumpAlloc. [zeo_render_texture]
2023. 6.26. Modified some examples to conform with the latest version (thanks to Daishi Kaneta). [example]
2023. 6.26. Modified labels in _zPH3DFReadSTL_BinVec (thanks to Daishi Kaneta). [zeo_ph_stl]
2023. 6.24. Debugged zeo.h to include zeo_mapnet.h. [zeo]
2023. 6.24. Debugged zVec3DOrthoNormal. [zeo_vec3d]
2023. 6.22. Added a test for zAAError and zAACascade. [test]
2023. 6.21. Separated config and libinfo. [all]