@@ -1,3 +1,5 @@
+2024. 1. 3. Defined zFrame3DVec. [zeo_frame3d]
+2024. 1. 3. Redefined zMat3DVec. [zeo_mat3d]
 2023.12.20. Added zAA2AngleAndAxis. [zeo_vec3d]
 2023.12.20. Modified specifications of zVec3DNormalize and zVec3DNormalizeDRC to return 1 if the given vector is tiny. [zeo_vec3d]
 2023. 8.10. Modified _zShape3DImportFromZTK. [zeo_shape3d]
